# docker-palworld-server

./: .dockerignore  .env.example  .env.sample  .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build-and-deploy.yml  security.yml  test.yml  version.yml
config/: DefaultEngine.ini  DefaultPalWorldSettings.ini  alertmanager.yml  default.yaml  palworld_alert.yml  prometheus.yml
config/grafana/provisioning/dashboards/: dashboard.yml  palworld-dashboard.json
config/grafana/provisioning/datasources/: prometheus-datasource.yml
docker/: entrypoint.sh
docker/supervisor/: palworld.conf
scripts/: color_output.sh  entrypoint.dev.sh  healthcheck.py  ini_to_yaml_converter.py  validate_stage1.py
src/: __init__.py  config_loader.py  logging_setup.py  server_manager.py
src/backup/: __init__.py  backup_manager.py
src/clients/: __init__.py  rcon_client.py  rest_api_client.py  steamcmd_client.py
src/managers/: __init__.py  config_manager.py  integration_manager.py  process_manager.py
src/monitoring/: __init__.py  dashboard.py  event_dispatcher.py  idle_restart_manager.py  metrics_collector.py  monitoring_manager.py  player_monitor.py  prometheus_integration.py  server_monitor.py
src/notifications/: __init__.py  discord_notifier.py  message_loader.py
src/notifications/locales/: en.json  ja.json  ko.json
src/utils/: __init__.py  color_output.py  health_manager.py  helpers.py
templates/: dashboard.html
